--- a/src/Benchmarks/analysis/step_1-perf_comparison.ipynb
+++ b/src/Benchmarks/analysis/step_1-perf_comparison.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-06T13:21:14.421386Z",
-     "start_time": "2024-09-06T13:21:14.417664Z"
+     "end_time": "2024-09-09T06:10:31.808426Z",
+     "start_time": "2024-09-09T06:10:31.805179Z"
     }
    },
    "cell_type": "code",
@@ -22,7 +22,7 @@
    ],
    "id": "7749ec064416a5a8",
    "outputs": [],
-   "execution_count": 36
+   "execution_count": 19
   },
   {
    "metadata": {},
@@ -33,8 +33,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-06T13:21:14.470259Z",
-     "start_time": "2024-09-06T13:21:14.465778Z"
+     "end_time": "2024-09-09T06:10:31.856263Z",
+     "start_time": "2024-09-09T06:10:31.853192Z"
     }
    },
    "cell_type": "code",
@@ -45,13 +45,13 @@
    ],
    "id": "bb8cd9eb1fc259f1",
    "outputs": [],
-   "execution_count": 37
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-06T13:21:14.518184Z",
-     "start_time": "2024-09-06T13:21:14.513079Z"
+     "end_time": "2024-09-09T06:10:31.907044Z",
+     "start_time": "2024-09-09T06:10:31.900579Z"
     }
    },
    "cell_type": "code",
@@ -64,8 +64,8 @@
     "#dataset_name = \"kvasir\"\n",
     "#dataset_name = \"NucleiSeg\"\n",
     "#dataset_name = \"URDE\"\n",
-    "dataset_name = \"isaid\"\n",
-    "#dataset_name = \"coco\"\n",
+    "#dataset_name = \"isaid\"\n",
+    "dataset_name = \"coco\"\n",
     "\n",
     "model_names = [\"UNet_vanilla\", \"UNet_bcnn\", \"UNet_e2cnn\"]\n",
     "\n",
@@ -75,17 +75,17 @@
     "if dataset_name in [\"kvasir\", \"NucleiSeg\", \"URDE\"]:\n",
     "    perf_metrics = ['dice_score', 'IoU_score', 'precision_metric', 'recall_metric', 'accuracy_metric']\n",
     "else:\n",
-    "    perf_metrics = ['IoU_score', 'precision_metric', 'recall_metric', 'accuracy_metric', 'average_precision']"
+    "    perf_metrics = ['IoU_score', 'precision_metric', 'recall_metric', 'accuracy_metric']"
    ],
    "id": "initial_id",
    "outputs": [],
-   "execution_count": 38
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-06T13:21:14.568400Z",
-     "start_time": "2024-09-06T13:21:14.562154Z"
+     "end_time": "2024-09-09T06:10:31.956186Z",
+     "start_time": "2024-09-09T06:10:31.950446Z"
     }
    },
    "cell_type": "code",
@@ -124,13 +124,13 @@
    ],
    "id": "aba3c3ffe095f3b5",
    "outputs": [],
-   "execution_count": 39
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-06T13:21:14.617615Z",
-     "start_time": "2024-09-06T13:21:14.613047Z"
+     "end_time": "2024-09-09T06:10:32.007727Z",
+     "start_time": "2024-09-09T06:10:32.003603Z"
     }
    },
    "cell_type": "code",
@@ -151,13 +151,13 @@
    ],
    "id": "60490ea8f8330b37",
    "outputs": [],
-   "execution_count": 40
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-06T13:21:14.699057Z",
-     "start_time": "2024-09-06T13:21:14.662429Z"
+     "end_time": "2024-09-09T06:10:32.144658Z",
+     "start_time": "2024-09-09T06:10:32.053647Z"
     }
    },
    "cell_type": "code",
@@ -196,24 +196,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No file at the path you provided: /home/rob/Documents/3_projects/bench/_results/small_models/isaid/UNet_vanilla/fold_0/summary.json.\n"
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/coco/UNet_vanilla/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/coco/UNet_vanilla/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/coco/UNet_vanilla/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/coco/UNet_vanilla/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/coco/UNet_vanilla/fold_4/summary.json\n",
+      "No file at the path you provided: /home/rob/Documents/3_projects/bench/_results/small_models/coco/UNet_bcnn/fold_0/summary.json.\n"
      ]
     },
     {
      "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/home/rob/Documents/3_projects/bench/_results/small_models/isaid/UNet_vanilla/fold_0/summary.json'",
+     "evalue": "[Errno 2] No such file or directory: '/home/rob/Documents/3_projects/bench/_results/small_models/coco/UNet_bcnn/fold_0/summary.json'",
      "output_type": "error",
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[0;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[41], line 7\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m fold \u001B[38;5;129;01min\u001B[39;00m folds:\n\u001B[1;32m      6\u001B[0m     summary_loc \u001B[38;5;241m=\u001B[39m build_path(dataset_name, model_name, fold, root_dir\u001B[38;5;241m=\u001B[39mroot_dir)\n\u001B[0;32m----> 7\u001B[0m     num_params \u001B[38;5;241m=\u001B[39m \u001B[43mget_best_metrics\u001B[49m\u001B[43m(\u001B[49m\u001B[43msummary_loc\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfold\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mresult_dict\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mperf_metrics\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcriteria\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mnum_params\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m      9\u001B[0m results \u001B[38;5;241m=\u001B[39m {\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mnum_params\u001B[39m\u001B[38;5;124m'\u001B[39m: num_params}\n\u001B[1;32m     11\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m metric \u001B[38;5;129;01min\u001B[39;00m perf_metrics:\n",
-      "Cell \u001B[0;32mIn[39], line 3\u001B[0m, in \u001B[0;36mget_best_metrics\u001B[0;34m(summary_loc, fold_nb, result_dict, perf_metrics, criteria, num_params)\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mget_best_metrics\u001B[39m(summary_loc: \u001B[38;5;28mstr\u001B[39m, fold_nb: \u001B[38;5;28mint\u001B[39m, result_dict: \u001B[38;5;28mdict\u001B[39m, \n\u001B[1;32m      2\u001B[0m                      perf_metrics: \u001B[38;5;28mlist\u001B[39m, criteria: \u001B[38;5;28mstr\u001B[39m, num_params: \u001B[38;5;28mint\u001B[39m) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m \u001B[38;5;28mint\u001B[39m:\n\u001B[0;32m----> 3\u001B[0m     \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28;43mopen\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43msummary_loc\u001B[49m\u001B[43m)\u001B[49m \u001B[38;5;28;01mas\u001B[39;00m file:\n\u001B[1;32m      4\u001B[0m         data \u001B[38;5;241m=\u001B[39m json\u001B[38;5;241m.\u001B[39mload(file)\n\u001B[1;32m      6\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m num_params \u001B[38;5;241m==\u001B[39m \u001B[38;5;241m0\u001B[39m:\n",
+      "Cell \u001B[0;32mIn[24], line 7\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m fold \u001B[38;5;129;01min\u001B[39;00m folds:\n\u001B[1;32m      6\u001B[0m     summary_loc \u001B[38;5;241m=\u001B[39m build_path(dataset_name, model_name, fold, root_dir\u001B[38;5;241m=\u001B[39mroot_dir)\n\u001B[0;32m----> 7\u001B[0m     num_params \u001B[38;5;241m=\u001B[39m \u001B[43mget_best_metrics\u001B[49m\u001B[43m(\u001B[49m\u001B[43msummary_loc\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfold\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mresult_dict\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mperf_metrics\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcriteria\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mnum_params\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m      9\u001B[0m results \u001B[38;5;241m=\u001B[39m {\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mnum_params\u001B[39m\u001B[38;5;124m'\u001B[39m: num_params}\n\u001B[1;32m     11\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m metric \u001B[38;5;129;01min\u001B[39;00m perf_metrics:\n",
+      "Cell \u001B[0;32mIn[22], line 3\u001B[0m, in \u001B[0;36mget_best_metrics\u001B[0;34m(summary_loc, fold_nb, result_dict, perf_metrics, criteria, num_params)\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mget_best_metrics\u001B[39m(summary_loc: \u001B[38;5;28mstr\u001B[39m, fold_nb: \u001B[38;5;28mint\u001B[39m, result_dict: \u001B[38;5;28mdict\u001B[39m, \n\u001B[1;32m      2\u001B[0m                      perf_metrics: \u001B[38;5;28mlist\u001B[39m, criteria: \u001B[38;5;28mstr\u001B[39m, num_params: \u001B[38;5;28mint\u001B[39m) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m \u001B[38;5;28mint\u001B[39m:\n\u001B[0;32m----> 3\u001B[0m     \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28;43mopen\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43msummary_loc\u001B[49m\u001B[43m)\u001B[49m \u001B[38;5;28;01mas\u001B[39;00m file:\n\u001B[1;32m      4\u001B[0m         data \u001B[38;5;241m=\u001B[39m json\u001B[38;5;241m.\u001B[39mload(file)\n\u001B[1;32m      6\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m num_params \u001B[38;5;241m==\u001B[39m \u001B[38;5;241m0\u001B[39m:\n",
       "File \u001B[0;32m~/Documents/Github/seg-equi-architectures/.venv/lib/python3.11/site-packages/IPython/core/interactiveshell.py:310\u001B[0m, in \u001B[0;36m_modified_open\u001B[0;34m(file, *args, **kwargs)\u001B[0m\n\u001B[1;32m    303\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m file \u001B[38;5;129;01min\u001B[39;00m {\u001B[38;5;241m0\u001B[39m, \u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m2\u001B[39m}:\n\u001B[1;32m    304\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\n\u001B[1;32m    305\u001B[0m         \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mIPython won\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mt let you open fd=\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mfile\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m by default \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m    306\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m    307\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124myou can use builtins\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m open.\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m    308\u001B[0m     )\n\u001B[0;32m--> 310\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mio_open\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfile\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n",
-      "\u001B[0;31mFileNotFoundError\u001B[0m: [Errno 2] No such file or directory: '/home/rob/Documents/3_projects/bench/_results/small_models/isaid/UNet_vanilla/fold_0/summary.json'"
+      "\u001B[0;31mFileNotFoundError\u001B[0m: [Errno 2] No such file or directory: '/home/rob/Documents/3_projects/bench/_results/small_models/coco/UNet_bcnn/fold_0/summary.json'"
      ]
     }
    ],
-   "execution_count": 41
+   "execution_count": 24
   },
   {
    "metadata": {},
